@@ -2364,14 +2364,6 @@ int Mob::CalcBuffDuration(Mob *caster, Mob *target, uint16 spell_id, int32 caste
 		castlevel = caster_level_override;
 
 	int res = CalcBuffDuration_formula(castlevel, formula, duration);
-	// Only need this for clients, since the change was for bard songs, I assume we should keep non bard songs getting +1
-	// However if its bard or not and is mez, charm or fear, we need to add 1 so that client is in sync
-	if(!IsShortDurationBuff(spell_id) ||
-		IsFearSpell(spell_id) ||
-		IsCharmSpell(spell_id) ||
-		IsMezSpell(spell_id) ||
-		IsBlindSpell(spell_id))
-		res += 1;
 	
 	res = mod_buff_duration(res, caster, target, spell_id);
 
